# quest

./: .editorconfig  .env.example  .gitignore  .settings.example.toml  .settings.local.example.toml  ARCHITECTURAL-DECISION.md  BUGS.md  CLAUDE.md  CODE_REVIEW_QEP_060_061_062.md  Cargo.toml  DESIGN-SUMMARY-QEP-063.md  FINAL-STATUS.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_BUG_021.md  MILESTONES.md  Oops.rej  QEP-049-COMPLETE.md  QEP-049-STATUS.md  QEP-049-SUMMARY.md  QEP-060-PHASE3-PLAN.md  QEP-063-CONSOLIDATED.md  QEP-063-INDEX.md  QEP-063-QUICK-REFERENCE.md  QEP-063-README.md  QEP-ECOSYSTEM.md  QEP_003_CODE_REVIEW.md  QEP_003_IMPROVEMENTS.md  QEP_045_CODE_REVIEW.md  README.md  UNWRAP_FIXES.md  WISHLIST.md  WORK-SUMMARY.md  check_type.q  discover_tests.q  docker-compose.yml  project.yaml  quest.toml  test_all.sh  test_array_index_bug.q  test_break_debug.q  (+3 more)
.claude/commands/: bug-fix.md  code-review.md  code.md  fuzz-collect.md  fuzz.md  spec-review.md  spec.md
.github/: README.md
.github/workflows/: blog-image.yml  check.yml  nightly.yml  test.yml
benches/base64/: Cargo.toml  run.sh  test.js  test.py  test.q  test.rb  test.rs
benches/bf/: README.md  bench.b  bench_simple.b  bf.q  bf_modern.q  bf_opt.q  bf_optimized.q  run.sh
benches/fib/: fib.js  fib.lua  fib.py  fib.q  fib.rb  fib_jit.lua  run.sh
benches/json/: run.sh  runs.txt  test.js  test.py  test.q  test.rb
benches/json/json.rs/: Cargo.toml
benches/json/json.rs/src/: json_jq.rs  json_pull.rs  json_struct.rs  json_value.rs
benches/matmul/: matmul-ndarray.q  matmul.js  matmul.py  matmul.q  matmul.rb  run.sh  runs.txt
benches/primes/: primes.js  primes.lua  primes.py  primes.q  primes.rb  primes_jit.lua  run.sh  runs.txt
bugs/001-module_function_scope_isolation/: 000_initial_investigation.md  001_debugging_progress.md
bugs/003_nested_exception/: fail.q
bugs/004_string_bytes_bracket_indexing/: _bytes_fail.q  _string_fail.q  _workaround.q  description.md
bugs/006_stack_trace_depth/: README.md
bugs/016_type_mutations_lost_in_recursion/: ROOT_CAUSE_ANALYSIS.md  TEST_RESULTS.md  minimal_repro.q  non_recursive_works.q  (+1 more)
docs/: .dockerignore  CHANGELOG_DECIMAL.md  Dockerfile  LANGUAGE_FEATURE_COMPARISON.md  README.md  STDLIB_COMPARISON.md  SYNTAX_HIGHLIGHTING.md  TIME_LIBRARY_ANALYSIS.md  TIME_LIBRARY_FINAL_SUMMARY.md  TIME_LIBRARY_PHASE2_COMPLETE.md  arrays_progress.md  book.toml  build.q  docusaurus.config.ts  language_design.md  loops.md  modules.md  package-lock.json  package.json  sidebar.q  sidebars.ts  string.md  types.md
docs-old/: arrays.md  math.md  modules.md  pydantic.q  string.md  system_variables.md
examples/: array_new_demo.q  chr_ord_demo.q  decimal_demo.q  decorators_basic.q  decorators_named_args.q  html_templates_demo.q  http_client_demo.q  logging_demo.q  ndarray_demo.q  ndarray_full_demo.q  performance_logging.q  postgres_uuid_example.q  qep_042_optimizations_demo.q  relative_imports_demo.q  round_demo.q  term_demo.q  ticks_demo.q  urlparse_demo.q  uuid_all_versions.q  uuid_examples.q  varargs_demo.q
fuzz/: README.md  history.txt  log.sh
lib/: this.q
qdoc/: README.md  build.q
reports/: qep-049-deep-recursion-tests.md  qep-049-expression-routing-success.md  qep-049-final-status.md  qep-049-method-call-success.md  qep-049-phase1-4-complete.md  qep-049-phase10-postfix-complete.md  qep-049-phase11-partial-complete.md  qep-049-phase6-summary.md  qep-049-phase8-loops-complete.md  qep-049-phase9-exceptions-complete.md  qep-049-postfix-implementation-status.md  qep-049-routing-constraints.md
scripts/: bench.q  profile-cpu.sh  profile-flamegraph.sh  profile-memory.sh  qtest  test-setup  test.q  view-profile.sh
specs/: LANGUAGE_COMPARISON.md  async_plan.md  qep-000-development-flow.md  qep-003-function-decorators.md  qep-010-io-redirection.md  qep-013-file-objects.md  qep-015-type-annotations.md  qep-016-match-statement.md  qep-022-expect-library.md  qep-023-safe-assignment-operator.md  qep-025-tuple-type.md  qep-027-028-compatibility-analysis.md  qep-027-async-tasks.md  qep-033-default-parameters.md  qep-034-implementation-report.md  qep-034-variadic-parameters.md  qep-037-typed-exceptions.md  qep-038-trait-based-exception-validation.md  qep-039-hybrid-bytecode-interpreter.md  qep-040-linter-formatter.md  qep-043-scoped-imports.md  qep-044-cargo-package-management.md  qep-045-struct-field-defaults.md  qep-046-cache-decorator-improvements.md  qep-047-docker-fuzz-runner.md  qep-048-stack-depth-tracking.md  qep-049-iterative-evaluator.md  qep-051-web-framework.md  qep-052-file-upload-support.md  qep-054-realtime-web-framework.md  qep-055-async-concurrency.md  qep-056-structured-control-flow.md  qep-057-enhanced-error-diagnostics.md  qep-060-application-centric-web-server.md  qep-061-web-middleware-system.md  qep-062-flexible-routing.md  qep-063-architecture.md  qep-063-universal-request-response-types.md
src/: alloc_counter.rs  commands.rs  control_flow.rs  doc.rs  embedded_lib.rs  error_macros.rs  eval.rs  exception_types.rs  function_call.rs  json_utils.rs  main.rs  main.rs.backup  main.rs.interpolation  module_loader.rs  numeric_ops.rs  quest.pest  quest.pest.broken  repl.rs  scope.rs  server.rs  string_utils.rs  types.rs
std/: test.q
test/: MANUAL_TESTS.md  README.md  _pub_const_helper.q  _run.q  bigint_test.q  bracket_indexing_test.q  bytes.q  bytes_test.q  closures_test.q  crypto_test.q  del_test.q  exception_types_test.q  glob_test.q  hash.q  hash_test.q  hello.q  indexed_assignment_test.q  magic_variables_test.q  match_range_test.q  match_test.q  numeric_ops_test.q  os_test.q  pub_const_test.q  qep057_line_numbers_test.q  qep_049_deep_nesting_test.q  regex.q  regex_test.q  run.q  scope_management_test.q  sys_test.q  term_test.q  typed_let_test.q  with_statement_test.q
vscode-ext/: .vscodeignore  README.md  language-configuration.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
(+827 files in other folders)
