[package]
name = "quest"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
rustyline = "14.0"
term_size = "0.3"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
crc32fast = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
glob = "0.3"
base64 = "0.22"
jiff = "0.1"
serialport = "4.5"
regex = "1.10"
rusqlite = { version = "0.37", features = ["bundled"] }
postgres = { version = "0.19", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
chrono = "0.4"
pg_interval = "0.4"
mysql = "25.0"
uuid = { version = "1.11", features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8", "serde"] }
rand = "0.8"
