[package]
name = "vibequest"
version = "0.1.10"
edition = "2021"
authors = ["Steven Osborn"]
description = "A vibe-coded scripting language focused on developer happiness with a REPL implementation in Rust"
readme = "README.md"
repository = "https://github.com/lolsborn/quest"
license = "Apache-2.0"
keywords = ["scripting", "interpreter", "repl", "language", "quest"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "docs/",
    "examples/",
    "specs/",
    "bugs/",
    "reports/",
    "benches/",
    "test/",
    "scripts/",
    "target/",
    ".git/",
    ".github/",
    ".claude/",
    "*.profdata",
    "*.profraw",
    "WISHLIST.md",
    "QEP-*.md",
    "Oops.rej",
    ".settings.local.example.toml",
]

[[bin]]
name = "quest"
path = "src/main.rs"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
rustyline = "14.0"
term_size = "0.3"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
crc32fast = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
glob = "0.3"
base64 = "0.22"
jiff = "0.1"
serialport = "4.5"
regex = "1.10"
rusqlite = { version = "0.37", features = ["bundled"] }
postgres = { version = "0.19", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
chrono = "0.4"
pg_interval = "0.4"
rust_decimal = { version = "1.36", features = ["db-postgres", "serde-float"] }
mysql = { version = "25.0", features = ["rust_decimal"] }
uuid = { version = "1.11", features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8", "serde"] }
rand = "0.8"
rand_pcg = "0.3"
csv = "1.3"
ordered-float = "4.2"
tera = "1.20"
pulldown-cmark = "0.12"
# HTTP client and server
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "gzip"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio-tungstenite = "0.21"
futures = "0.3"
lazy_static = "1.5"
bytes = "1.5"
urlparse = "0.7"
urlencoding = "2.1"
multer = "3.1"
flate2 = "1.0"
bzip2 = "0.4"
dhat = { version = "0.3", optional = true }
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
ndarray = "0.16"
notify = "6.1"
include_dir = "0.7"
dirs = "5.0"
ctrlc = "3.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
dhat-heap = ["dhat"]

[profile.profiling]
inherits = "release"
debug = 2  # Full debug info (better for profiling)
strip = false  # Don't strip symbols
split-debuginfo = "unpacked"  # Keep debug info in binary (macOS)
