[package]
name = "json-rs"
version = "0.0.1"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
serde_json = "1.0.142"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.jq-rs]
version = "0.4.1"
optional = true

[[bin]]
name = "json-value-rs"
path = "src/json_value.rs"
required-features = []

[[bin]]
name = "json-struct-rs"
path = "src/json_struct.rs"
required-features = []

[[bin]]
name = "json-pull-rs"
path = "src/json_pull.rs"
required-features = []

[[bin]]
name = "json-jq-rs"
path = "src/json_jq.rs"
required-features = ["jq-rs"]
